--- a/Aplicacoes_para_Internet/2020-04-30/exercicios/questao-17/index.html
+++ b/Aplicacoes_para_Internet/2020-04-30/exercicios/questao-17/index.html
@@ -26,21 +26,26 @@
             <button class="btn" onclick="calcular(7)">7</button>
             <button class="btn" onclick="calcular(8)">8</button>
             <button class="btn" onclick="calcular(9)">9</button>
-            <button class="btn" onclick="calcular('c', true)">AC</button>
+            <button class="btn" onclick="calcular('^', true)">^</button>
         </div>
         
         <div class="row">
             <button class="btn" onclick="calcular(4)">4</button>
             <button class="btn" onclick="calcular(5)">5</button>
             <button class="btn" onclick="calcular(6)">6</button>
-            <button class="btn" onclick="calcular('=', true)">=</button>
+            <button class="btn" onclick="calcular('c', true)">AC</button>
         </div>
 
         <div class="row">
             <button class="btn" onclick="calcular(1)">1</button>
             <button class="btn" onclick="calcular(2)">2</button>
             <button class="btn" onclick="calcular(3)">3</button>
+        </div>
+
+        <div class="row">
             <button class="btn" onclick="calcular(0)">0</button>
+            <button class="btn" onclick="calcular('.')">.</button>
+            <button class="btn" onclick="calcular('=', true)">=</button>
         </div>
     </div>
 
