--- a/Aplicacoes_para_Internet/2020-04-30/exercicios/questao-10.html
+++ b/Aplicacoes_para_Internet/2020-04-30/exercicios/questao-10.html
@@ -54,6 +54,8 @@
 
             let number = Number(document.querySelector('#number').value)
             let cont = 1
+
+            number = number < 100 ? number : 100
             
             while (cont <= number) {
                 let item = document.createElement('li')
